--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
  {
-      "name": "starter-node-angular",
-      "main": "server.js",
+      "name": "deluxe.mx",
+      "main": "deluxe.js",
+      "version": "0.2.0",
+      "description": "Website for Deluxe App Available for iOS and Android",
+      "keywords": [
+        "website",
+        "steed",
+        "deluxe"
+      ],
+      "author": "Matias Gianesini <matias@steed.mx>",
+      "license": "ISC",
+
       "dependencies": {
         "express" : "~4.5.1",
         "mongoose" : "~3.8.0",
+        "bson": "latest",
         "body-parser" : "~1.4.2",
         "method-override" : "~2.0.2"        
-      }
+      },
+
+      "engines": {
+        "node": ">=6.0.0"
+      },
+      "repository": {
+        "type": "git",
+        "url": "git+https://github.com/SteedMx/deluxe.mx.git"
+      },
+      "bugs": {
+        "url": "https://github.com/SteedMx/deluxe.mx/issues"
+      },
+      "homepage": "https://github.com/SteedMx/deluxe.mx#readme"
+
     }
